--- a/index.css
+++ b/index.css
@@ -1,258 +1,370 @@
-
-*{
-    border: 1px solid purple
+/* Genel Stil */
+* {
+  color: white;
+  font-family: "Roboto Light", sans-serif;
+  font-size: 16px;
 }
-
 body {
-    padding: 1rem;
-    margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
+  overflow-x: hidden;
+  background: rgb(24, 23, 23);
 }
 
-/* header */
-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: stretch;
-    gap: 1rem;
+/* Arka Plan ve Sticky Header */
+.background {
+  position: relative;
+}
+.background::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 120vh;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.8)),
+    url("https://image.tmdb.org/t/p/w500/1E5baAaEse26fej7uHcjOgEE2t2.jpg")
+      no-repeat center center;
+  background-size: cover;
+  z-index: -1;
 }
 
-header h1 {
-    color: red;
-    margin:0;
-    flex: 1;
+/* Header Stil */
+.header-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  background: rgba(0, 0, 0, 0.8);
 }
-
-header nav {
-    display: flex;
-    justify-content: space-between;
-    gap: .5rem;
-   
+.header-left {
+  flex: 1;
+  padding-left: 2rem;
 }
-
+.nav-center {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+  flex: 2;
+}
 header nav a {
-    color: rgb(111, 111, 111);
-    text-decoration: none;
+  color: rgb(241, 10, 10);
+  text-decoration: none;
 }
-
 header .user-panel {
-    display:flex;
-    justify-content: flex-end;
-    align-items: center;
-    gap: .5rem;
-    flex: 1;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  flex: 1;
+  justify-content: flex-end;
 }
 
-.user-panel input {
-    padding: .3rem;
-    width: 7rem;
-    position: relative;
-    cursor: pointer;
+/* Arama Kutusu ve İkon */
+.search-box {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+.search-box input {
+  padding: 0.3rem 1.5rem 0.3rem 0.5rem;
+  width: 7rem;
+  border: none;
+  border-radius: 0.3rem;
+}
+.search-icon {
+  position: absolute;
+  right: 0.5rem;
+  color: gray;
 }
 
-#buyutec {
-    position: absolute;
-    margin: 8rem;
-}
-.user-panel img {
-    border-radius: 100px;
-    width: 2.5rem;
-}   
-
-
-/* hero */
-main {
-    aspect-ratio: 5/3;
-    border: 1px solid  black;
-    margin: 2rem auto;
-    padding: 1rem;
-    display: flex;
-    align-items: center;
+/* Hamburger Menü ve Dropdown */
+nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
-.user-rating i {
-    color:red;
+.menu-links {
+  display: none; /* Varsayılan olarak gizli */
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
 }
 
-.content-rating {
-    border: 1px solid black;
-    border-radius: .3rem;
-    padding: .2rem;
-    margin: 0 .5rem;
+.menu-links li {
+  margin: 0.5em 0;
 }
 
-.main-movie {
-    width: 60%;
+.menu-links li a {
+  color: white;
+  text-decoration: none;
 }
 
-.movie-details span {
-    color: red;
-    font-weight: bold;;
+.hamburger-menu {
+  font-size: 1.5em;
+  color: white;
+  display: none;
+  cursor: pointer;
 }
 
-.movie-details p {
-    margin: .5rem 0;
+.suggestion-movies {
+  display: flex;
+  gap: 1.5rem;
+  overflow-x: scroll;
+}
+.suggestion-movies::-webkit-scrollbar {
+  display: none;
 }
 
 button {
-    background: red;
-    border: 0;
-    padding: .6rem 2.1rem;
-    border-radius: .5rem;
-    color: white;
-    font-size: 1.2rem;
+  background: red;
+  border: none;
+  padding: 0.6rem 1.5rem;
+  border-radius: 0.5rem;
+  color: white;
+  font-size: 1.1rem;
+}
+
+/* hero */
+main {
+  margin: 2rem auto;
+  padding: 0.3rem;
+  display: flex;
+  align-items: center;
+}
+.main-movie {
+  width: 20%;
+  height: 40%;
+  margin-top: 20rem;
+}
+.main-movie img {
+  width: 10rem;
+  height: 10rem;
+}
+
+.user-rating i {
+  color: red;
+}
+
+.content-rating {
+  border: 1px solid black;
+  border-radius: 0.3rem;
+  padding: 0.2rem;
+  margin: 0 0.5rem;
+}
+
+.main-movie {
+  width: 60%;
+}
+
+.movie-details span {
+  color: red;
+  font-weight: bold;
+}
+
+.movie-details p {
+  margin: 0.5rem 0;
+}
+
+button {
+  background: red;
+  border: 0;
+  padding: 0.6rem 2.1rem;
+  border-radius: 0.5rem;
+  color: white;
+  font-size: 1.2rem;
 }
 
 button i {
-    margin-left: -1rem;
-    margin-right: .5rem;
+  margin-left: -1rem;
+  margin-right: 0.5rem;
 }
 
 /* suggestion */
 
 .suggestion-row {
-    margin-bottom: 2rem
+  margin-bottom: 2rem;
 }
 
 .suggestion-row-title {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .suggestion-row-title a {
-    text-decoration: none;
-    color: gray;
+  text-decoration: none;
+  color: gray;
 }
 
 .suggestion-row-title a:hover {
-    color: red;
+  color: red;
 }
 
 .suggestion-row-title h3 {
-    margin: .5rem 0
+  margin: 0.5rem 0;
 }
 
 .suggestion-movies {
-    display: flex;
-    gap: 1.5rem;
-    justify-content: start;
-    align-items: center;
-    overflow: auto;
+  display: flex;
+  gap: 1.5rem;
+  justify-content: start;
+  align-items: center;
+  overflow: auto;
 }
 .suggestion-movies::-webkit-scrollbar {
-    display: none;
+  display: none;
 }
-.movie-info img{
-    width: 15rem;
-    height: 18rem;
-    border-radius: 5px;
+.movie-info img {
+  width: 15rem;
+  height: 18rem;
+  border-radius: 5px;
 }
 
 .movie-card {
-    border: 1px solid black;
-    min-width: 250px;
-    border-radius: .5rem;
-    padding: 2rem 1rem;
-    display: flex;
-    align-items: center;
+  border: 1px solid black;
+  min-width: 250px;
+  border-radius: 0.5rem;
+  padding: 2rem 1rem;
+  display: flex;
+  align-items: center;
 }
 
 .movie-card h4 {
-    margin: 0;
+  margin: 0;
 }
 
 .movie-card .content-rating {
-    margin-left: 0;
+  margin-left: 0;
 }
 
 .movie-detail-container {
-    display: flex;
-    flex-direction: column;
-    gap:1rem
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 .movie-card button {
-    padding: .5rem 1.8rem;
-    border-radius: .4rem;
-    font-size: 1rem;
+  padding: 0.5rem 1.8rem;
+  border-radius: 0.4rem;
+  font-size: 1rem;
 }
 
 .movie-card button i {
-    margin-left: -.8rem;
-    margin-right: .3rem;
+  margin-left: -0.8rem;
+  margin-right: 0.3rem;
 }
 
 /* footer */
 
 footer {
-    display: flex;
-    justify-content: space-between;
-    gap: 1rem;
+  display: flex;
+  flex-direction: column;
 }
 
 footer h5 {
-    margin-top:0;
+  margin-top: 0;
+}
+.footer-navigation {
+  width: 100%;
+}
+.footer-bottom-navigation {
+  display: flex;
+  justify-content: space-around;
 }
 
 .footer-navigation nav {
-    display: flex;
-    gap: 1rem;
+  display: flex;
+  gap: 1rem;
 }
-.footer-navigation nav a{
-    text-decoration: none;
-    color: rgb(111, 111, 111);
+.footer-navigation nav a {
+  text-decoration: none;
+  color: rgb(230, 19, 19);
 }
 
 .social-navigation {
-    min-width: 120px
+  min-width: 120px;
 }
 
 .mobile-app-navigation {
-    min-width: 230px;
+  min-width: 230px;
 }
 
 .mobile-app-navigation img {
-    height: 2rem
+  height: 2rem;
 }
 
-
 @media (max-width: 500px) {
-    header {
-        flex-wrap: wrap;
-    }
+  header {
+    flex-wrap: wrap;
+  }
+  .header-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    background: rgba(0, 0, 0, 0.8);
+  }
+  header nav {
+    order: 1;
+    width: 100%;
+    justify-content: center;
+    margin-top: 1rem;
+  }
 
-    header nav {
-        order: 1;
-        width: 100%;
-        justify-content: center;
-        margin-top: 1rem;
-    }
+  .nav-menu {
+    display: block;
+    margin-top: 1.1rem;
+  }
 
-    header .user-panel {
-        display: none;
-    }
+  .hamburger-menu {
+    display: block;
+  }
 
-    .nav-menu {
-        display: block;
-        margin-top: 1.1rem;
-    }
+  .menu-links {
+    display: none;
+    flex-direction: column;
+    background-color: #444;
+    position: absolute;
+    top: 60px;
+    right: 10px;
+    width: 150px;
+    border-radius: 8px;
+    padding: 1em;
+  }
 
+  .menu-links li a {
+    color: white;
+    padding: 10px;
+    display: block;
+    text-align: center;
+  }
 
-    .main-movie {
-        width: 100%;
-    }
+  /* Menü aktif olduğunda göster */
+  .menu-active {
+    display: flex;
+  }
 
-    footer {
-        flex-wrap: wrap;
-        text-align: center;
-    }
+  .main-movie {
+    width: 100%;
+  }
 
-    footer nav {
-        justify-content: center;
-    }
+  footer {
+    flex-wrap: wrap;
+    text-align: center;
+  }
 
-    .social-navigation, .mobile-app-navigation {
-        width: 100%;
-    }
+  footer nav {
+    justify-content: center;
+  }
+
+  .social-navigation,
+  .mobile-app-navigation {
+    width: 100%;
+  }
 }
