--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@
   }
   body {
     overflow-x: hidden;
-    background: rgb(24, 23, 23);
+    background: black;
   }
   
   /* Arka Plan ve Sticky Header */
@@ -19,7 +19,7 @@
     top: 0;
     left: 0;
     width: 100vw;
-    height: 80vh;
+    height: 100vh;
     background: linear-gradient(to bottom, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.8)),
       url("https://image.tmdb.org/t/p/w500/1E5baAaEse26fej7uHcjOgEE2t2.jpg")
         no-repeat center center;
